src/objects/QQNLayer__c.object
<CustomObject>
    <description>One Layer of a Neural Network</description>
    <fields>
        <fullName>IsOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOutput</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LayerId__c</fullName>
        <label>LayerId</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LearningRate__c</fullName>
        <label>LearningRate</label>
        <precision>10</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>NetworkId</label>
        <referenceTo>QQNNeuralNetwork__c</referenceTo>
        <relationshipName>Layer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NeuronCount__c</fullName>
        <label>NeuronCount</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QQNLayer</label>
    <nameField>
        <displayFormat>AINNL-{00000000}</displayFormat>
        <label>Layer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>